# safe-exit

./: LICENSE.txt  README.rst  publish.sh  requirement-dev.txt  setup.cfg
.github/workflows/: run_tests.yml
docs/source/: api.rst  conf.py  index.rst  recipes.rst
safe_exit/: __init__.py
tests/: test_safe_exit_posix.py  test_safe_exit_windows.py
