[metadata]
name = safe-exit
version = 0.1.1
license = MIT
description = Handle graceful process termination
long_description = file: README.rst
author = Zhang JianAo
author_email = zhangjianao@gmail.com
url = https://github.com/ZhangJianAo/safe-exit

classifiers=
   Development Status :: 6 - Mature
   License :: OSI Approved :: MIT License
   Programming Language :: Python :: 3

[options]
packages = safe_exit
package_dir =
    safe_exit=safe_exit
include_package_data = True
install_requires =
   psutil
